# salary-bot

./: config.py  main.py  pyproject.toml
src/: consts.py
src/bot/: actions.py  util.py
src/db/: ManagerDB.py
