[tool.poetry]
name = "bot-test"
version = "0.1.0"
description = ""
authors = ["arsenyvolodko <arvolodko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
python-dateutil = "^2.8.2"
motor = "^3.3.2"
poetry-dotenv-plugin = "^0.2.0"
self = "^2020.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
